# ecommerce

./: .gitignore  README.md  esbuild.config.js  package-lock.json  package.json  product_playground.csv  pyproject.toml  pyrightconfig.json  pyvenv.cfg  tailwind.config.cjs  tailwind.config.js  vite.config.js
client/: main.js
client/components/alert/: alert.js
client/components/card/: card.css  card.js
client/components/cart-card/: cart-card.js
client/components/filters-drawer/: filters-drawer.css  filters-drawer.js
client/components/home-search/: home-search.js
client/styles/: style.css  tailwind.css
client/styles/animations/: fade.css  lightspeed.css
client/styles/base/: settings.css
client/styles/icons/: icons.css
client/styles/icons/fonts/: icomoon.eot
client/utils/: defineElement.js
ecommerce/: settings.py  urls.py
notes/: design.md  todo-january-21-2024.md.md
tools/: create_products.py  csv_parser.py  migrate.sh  seed.py
website/: admin.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_category_product_categories.py
website/templates/layout/: base.html  header.html
website/templates/pages/: cart.html  home.html  product-detail.html
website/templates/website/components/: alert.html  card.html  cart-card.html  filters.html
website/templates/website/elements/: cart-count.html
website/templates/website/layout/: base.html  header.html
website/templates/website/pages/: cart.html  home.html  product-detail.html
