[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "A simple Django project"
authors = ["Joe joimee.cajandab@gmail.com"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Django templates
[tool.djlint]
blank_line_after_tag="load,extends"

[project.scripts]
"manage.py" = "ecommerce:django_manage"
